--- a/sqlqueries.properties
+++ b/sqlqueries.properties
@@ -1,23 +1,23 @@
 user_check = select * from user where UserName = %s
 user_role = select userType from user where username = %s
-group_name=select groupName from groups where userName = %s
+group_name=select groupName from groupss where userName = %s
 user_name_role=select userName from user where userType = %s
-gp_name_unique=select distinct groupName from groups
-usr_group=select userName from groups where groupName = %s
+gp_name_unique=select distinct groupName from groupss
+usr_group=select userName from groupss where groupName = %s
 userid=select userID from user where userName = %s
-groupid=select groupID from groups where groupName = %s
+groupid=select groupID from groupss where groupName = %s
 message_user=select msg,userName from messages where groupName = %s
 all_users=select userName from user;
-usr_check_ingroup=select * from groups where username=%s AND groupName=%s
+usr_check_ingroup=select * from groupss where username=%s AND groupName=%s
 
 
 
 ##insert queries
 insert_user = insert into user (UserName,UserType,password) values(%s,%s,%s)
-insert_group = insert into groups(groupName,userName,userID) values (%s,%s,%s)
+insert_group = insert into groupss(groupName,userName,userID) values (%s,%s,%s)
 insert_message=insert into messages(msg,groupName,userName) values(%s,%s,%s)
 
 ##Delete Queries
 delete_user=delete from user where userName = %s
-delete_user_group=delete from groups where userName=%s AND groupName = %s
+delete_user_group=delete from groupss where userName=%s AND groupName = %s
 delete_msg=
